--- a/angular/路由.md
+++ b/angular/路由.md
@@ -4,14 +4,11 @@
 
 ```typescript
  const routes: Routes = [
-  { path: 'home', component: HomeComponent },
-  { path: 'news', component: NewsComponent },
-  {
-    path: 'newscontent/:id',
-    component: NewscontentComponent
-},
-  { path: '',   redirectTo: '/home', pathMatch: 'full' },
-  { path: '**', component: PageNotFoundComponent }
+  	{ path: 'home', component: HomeComponent },
+  	{ path: 'news', component: NewsComponent },
+  	{ path: 'newscontent/:id',component: NewscontentComponent },
+  	{ path: '',   redirectTo: '/home', pathMatch: 'full' },
+  	{ path: '**', component: PageNotFoundComponent }
 ];
 ```
 
@@ -37,9 +34,33 @@
 
 ```js
 {
-    path: 'newscontent/:id',
+	path: 'newscontent/:id',
     component: NewscontentComponent
 },
 ```
+
 2. 跳转传参
+
+```html
+<a [roterLink]="['/newscontent',adi]">跳转到详情</a>
+<a roterLink="/newscontent/{{aid}}">跳转到详情</a>
+```
+
+3. 获取动态路由的值
+
+```js
+import { ActivatedRoute } from '@/angular/router';
+```
+
+```js
+constructor(private route:ActivatedRoute){}
+```
+
+```js
+ngOnInit() {
+	this.route.params.subscribe(date => this.id = data.id);
+}
+```
+
+4. 动态路由的js跳转
 
