--- a/angular/路由.md
+++ b/angular/路由.md
@@ -19,7 +19,7 @@
 <a routerLink = "/news">新闻</a>
 ```
 
-## routerLinkActive 设置 routerLink 默认选中路由
+## routerLinkActive 设置 routerLink 默认选中路由样式
 
 ```html
 <h1>
@@ -42,7 +42,7 @@
 2. 跳转传参
 
 ```html
-<a [roterLink]="['/newscontent',adi]">跳转到详情</a>
+<a [roterLink]="['/newscontent',aid]">跳转到详情</a>
 <a roterLink="/newscontent/{{aid}}">跳转到详情</a>
 ```
 
@@ -64,3 +64,69 @@ ngOnInit() {
 
 4. 动态路由的js跳转
 
+```js
+import { Router } from '@angular/router';
+```
+
+```js
+constructor(private router:Router){}
+```
+
+```js
+goNews() {
+	this.router.navigate(['/news', hero.id]);
+}
+```
+
+## get传值与取值
+
+1. 跳转传参
+
+```html
+ <li *ngFor="let item of list;let key=index;">
+    <!-- <a href="/newscontent?aid=123">{{key}}--{{item}}</a> -->
+    
+    <a [routerLink]="['/newscontent']" [queryParams]="{aid:key}">{{key}}--{{item}}</a>
+  </li>
+```
+2 .  获取get传值
+
+```typescript
+constructor(private route:ActivatedRoute)) {
+	console.log(this.route.queryParams);
+}
+```
+3. js跳转
+
+```js
+this.router.navigate(['info'], { queryParams:{ 'id': id } })
+```
+
+## 父子路由
+1. 创建组件引入组件
+
+```js
+import { NewsaddComponent } from './components/newsadd/newsadd.component';
+import { NewslistComponent } from './components/newslist/newslist.component';
+```
+
+2. 配置路由
+
+```js
+{
+	path: 'news',
+	component:NewsComponent,
+	children: [
+		{
+			path:'newslist',
+			component:NewslistComponent
+		},
+		{
+			path:'newsadd',
+			component:NewsaddComponent
+		}
+	]		
+}
+```
+
+3. 父组件中定义 router-outlet
